# eye-patch

./: .copier-answers.yml  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/: CONTRIBUTING.md
.github/workflows/: ci.yml
docs/: conf.py  index.md
eye_patch/: __init__.py  masking.py  naming.py  pixel_utils.py
tests/: test_masking.py  test_package.py
